@@ -231,6 +231,7 @@ libfreeipmi_la_SOURCES = \
 	util/ipmi-rmcpplus-util.c \
 	util/ipmi-sensor-and-event-code-tables-util.c \
 	util/ipmi-sensor-util.c \
+	util/ipmi-timestamp-util.c \
 	util/ipmi-util.c \
 	util/rmcp-util.c
 
